completed py file

--- a/Day 2 - Super Neta/Exercise-3/SQL_Agent_With_LLama3.ipynb
+++ b/Day 2 - Super Neta/Exercise-3/SQL_Agent_With_LLama3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,36 +20,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "our_prompt = \"What is the weather in bangalore today?\""
+    "our_prompt = \"What colour is a pear?\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I'm just an AI, I don't have real-time access to current weather conditions. However, I can suggest some ways for you to find out the weather in Bangalore today:\n",
-      "\n",
-      "1. **Check online weather websites**: You can visit websites like AccuWeather, Weather.com, or Skyscanner to get the current weather conditions and forecast for Bangalore.\n",
-      "2. **Use a weather app**: Download a reliable weather app on your mobile device, such as Dark Sky, Weather Underground, or Yr Weather, which provide real-time weather updates for various locations around the world, including Bangalore.\n",
-      "3. **Check social media**: Follow official accounts of Indian Meteorological Department (IMD) or Karnataka State Natural Disaster Management Centre (KSNDMC) on social media platforms like Twitter or Facebook to get updates on the weather in Bangalore.\n",
-      "4. **Contact a local**: If you know someone living in Bangalore, you can ask them about the current weather conditions.\n",
-      "\n",
-      "Please note that weather forecasts and conditions are subject to change, so it's always a good idea to check multiple sources for accurate information."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for chunk in llm.stream(our_prompt):\n",
     "    print(chunk, end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.utilities import SQLDatabase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = SQLDatabase.from_uri(f'uri_here')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.agent_toolkits import create_sql_agent\n",
+    "from langchain.agents import AgentType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent_executor = create_sql_agent(llm, db, agent_type=AgentType.ZERO_SHOT_REACT_DESCRIPTION, verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = agent_executor.invoke(\"Which AC had the maximum number of electors?\")"
    ]
   }
  ],
